partitioned existing vim config in different sections

--- a/app/views/generator/_config_group.haml
+++ b/app/views/generator/_config_group.haml
@@ -2,7 +2,7 @@
   .col-sm-2.strong
     = type.to_s.titleize
   .col-sm-10
-    - list_vim_configs(type).each_slice(4) do |group|
+    - config_list_for(:action, type).each_slice(4) do |group|
       .form-row
         - group.each do |config|
           .form-check.col-3
