--- a/app/views/generator/_vimrc.erb
+++ b/app/views/generator/_vimrc.erb
@@ -1,24 +1,18 @@
 set nocompatible
-
-<%= show_vim_config :variables, required: true %>
-
-" Personalize: allows customizations via a local configuration
+<%= display_config :variables, required: true %>
+" --> Personalize: allows customizations via a local configuration
 call SourceIfReadable("~/.vimrc.local.pre")
-
-<%= show_vim_config :plugin_manager, required: true %>
-<%= show_vim_config :sane_defaults %>
-<%= show_vim_config :basic_keymappings %>
-
+<%= display_config :plugin_manager, required: true %>
+<%= display_config :sane_defaults %>
+<%= display_config :basic_keymappings %>
 call plug#begin(expand("~/.vim/bundle"))
-
-<%= show_vim_config :startup_screen %>
-<%= show_vim_config :appearance %>
-<%= show_vim_config :diff %>
-<%= show_vim_config :mouse_support %>
-
-<%= show_vim_config :status_line %>
-<%= show_vim_config :colorschemes %>
-<%= show_vim_config :editor %>
-
+<%- loaded_configs = %w[variables plugin_manager sane_defaults basic_keymappings] %>
+<%- (read_configs.keys - loaded_configs).each do |config| %>
+<%= display_config config %>
+<%- end %>
+" --> Personalize: allows customizations via a local configuration
+call SourceIfReadable("~/.gvimrc")
+call SourceIfReadable("~/.vimrc.local")
 call plug#end()
 colorscheme nova
+let g:airline_theme='nova'
