added API docs on the website

--- a/app/views/generator/generate.haml
+++ b/app/views/generator/generate.haml
@@ -1,1 +1,13 @@
+"
+"   ██╗   ██╗██╗███╗   ███╗██████╗  ██████╗ ██████╗
+"   ██║   ██║██║████╗ ████║██╔══██╗██╔════╝██╔════╝
+"   ██║   ██║██║██╔████╔██║██████╔╝██║     ██║  ███╗
+"   ╚██╗ ██╔╝██║██║╚██╔╝██║██╔══██╗██║     ██║   ██║
+"    ╚████╔╝ ██║██║ ╚═╝ ██║██║  ██║╚██████╗╚██████╔╝
+"     ╚═══╝  ╚═╝╚═╝     ╚═╝╚═╝  ╚═╝ ╚═════╝ ╚═════╝
+"
+"   Customizable VimRC Generator: https://vimrc.org
+= "\"   Configuration Generated on: #{Time.now.strftime("%B %d, %Y")}".html_safe
+" ---------------------------------------------------
+
 = partial "generator/vimrc", locals: { list: list }
