--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -37,6 +37,12 @@
           by <a href="http://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a>
           for developers
         </small>
+        |
+        <small class="copyright">
+          Created with <i class="fa fa-heart"></i>
+          by <a href="https://nikhgupta.com" target="_blank">Nikhil Gupta</a>
+          for VIM users
+        </small>
       </div>
     </footer>
 
