minor fix with icon on homepage

--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -39,7 +39,7 @@
       .item.item-blue.col-md-4.col-sm-6.col-xs-6
         .item-inner
           .icon-holder
-            %i.icon.fa.fa-paper-plane
+            %i.icon.fa.fa-magic
           %h3.title Customizable
           %p.intro Hand-pick only the config you need
           %a.link{href: url_for(:pages, :customize)}
