using non-SSL version of command temporarily

--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -21,7 +21,7 @@
         the following terminal command:
         %pre#command
           %code
-            curl -s "https://vimrc.org/api/generate" > ~/.vimrc; vim +PlugInstall +q
+            curl -s "http://vimrc.org/api/generate" > ~/.vimrc; vim +PlugInstall +q
 
       .cta-container
         %a.btn.btn-primary.btn-cta{href: url_for(:pages, :customize)}
